# nifo

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  vcpkg.json
assets/models/duck/: Duck.mtl
assets/shaders/builtin/: blinn_phong.frag  grid.frag  grid.vert  half_lambert.frag  half_lambert.geom  half_lambert.vert  noop.frag  noop.vert  outline.frag  outline.vert  phong.frag  phong.geom  phong.vert  skybox.frag  skybox.vert
assets/shaders/builtin/postprocessing/: default.geom  default.vert  gaussian_blur.frag  merge.frag
forms/: import_3dmodel_preset.ui  name_panel.ui  parallel_light_panel.ui  point_light_panel.ui  spot_light_panel.ui  transform_panel.ui
include/nifo/core/: scene.h
include/nifo/core/builtin/: grid.h  rectangle.h  skybox.h
include/nifo/core/ecs/: assets_loader.h
include/nifo/core/ecs/components/: common.h  light.h  model.h  tags.h  transform.h
include/nifo/core/ogl/: camera.h  config.h  def.h  diagnostics.h  frame_buffer.h  glsl_structs.h  mesh.h  model.h  shader.h  texture.h  vertex_buffer.h
include/nifo/core/utils/: any_ref.h  core.h  lazy_evaluated.h  loop.h  meta.h  name_generator.h
include/nifo/ui/: arena.h  for_qss.h  hierarchy.h  inspector.h  main_window.h
include/nifo/ui/panels/: common.h  name_panel.h  name_panel.ui.h  parallel_light_panel.h  parallel_light_panel.ui.h  point_light_panel.h  point_light_panel.ui.h  spot_light_panel.h  spot_light_panel.ui.h  transform_panel.h  transform_panel.ui.h
include/nifo/ui/widgets/: import_3dmodel_dialog.h  import_3dmodel_preset.h  import_3dmodel_preset.ui.h  spinbox.h
src/nifo/: main.cpp
src/nifo/core/: scene.cpp
src/nifo/core/builtin/: grid.cpp  rectangle.cpp  skybox.cpp
src/nifo/core/ecs/components/: transform.cpp
src/nifo/core/ogl/: camera.cpp  config.cpp  frame_buffer.cpp  mesh.cpp  model.cpp  shader.cpp  texture.cpp  vertex_buffer.cpp
src/nifo/core/utils/: loop.cpp  name_generator.cpp
src/nifo/ui/: arena.cpp  for_qss.cpp  hierarchy.cpp  inspector.cpp  main_window.cpp
src/nifo/ui/panels/: common.cpp  name_panel.cpp  parallel_light_panel.cpp  point_light_panel.cpp  spot_light_panel.cpp  transform_panel.cpp
src/nifo/ui/widgets/: import_3dmodel_dialog.cpp  import_3dmodel_preset.cpp  spinbox.cpp
styles/: default.qss
